# Verihubs-Project

./: test.py  verihubs.ipynb  visualization_daily.py  visualization_monthly.py
.pyenv/: pyvenv.cfg
.pyenv/Scripts/: activate  activate.bat
verihubs-dagster/: README.md  asset_load_csv2.py  daily_visualization.py  monthly_visualization.py  pyproject.toml  setup.cfg  setup.py
verihubs-dagster/.tmp_dagster_home_xpblzvae/history/: runs.db
verihubs-dagster/.tmp_dagster_home_xpblzvae/history/runs/: index.db
verihubs-dagster/.tmp_dagster_home_xpblzvae/schedules/: schedules.db
verihubs-dagster/verihubs_dagster/: __init__.py  assets_create_visualization.py  assets_load_csv.py  definitions.py  sql.py  test.py
verihubs-dagster/verihubs_dagster.egg-info/: SOURCES.txt
